# boys

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .tarpaulin.toml  .travis.yml  Cargo.toml  Containerfile  Dockerfile  README.md  benchmark_values.txt  build_docs.bash  build_image.sh  build_image_unshare.sh  docker.sh  podman.sh
.github/: dependabot.yml
.github/workflows/: CI.yml  bench_branch_against_master.bash  docker.yml
benches/: boys_benchmark.rs
src/: data.rs  lib.rs
src/exact/: mod.rs
src/jeffhammond/: mod.rs
src/micb25/: data.rs  mod.rs
tests/: integration_test.rs
