[package]
name = "boys"
version = "0.1.0"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
description = "Different algorithms for calculating the Boys function"
repository = "https://github.com/berquist/boys"
readme = "README.md"
edition = "2018"

[dependencies]
GSL = "6.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "boys_benchmark"
harness = false

[package.metadata.docs.rs]
# See https://stackoverflow.com/q/46495063 for how to possibly use KaTeX
# instead of MathJax in the future
rustdoc-args = ["--html-in-header", "doc/mathjax.html"]
