[package]
name = "boys"
version = "0.1.1"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
description = "Different algorithms for calculating the Boys function"
repository = "https://github.com/berquist/boys"
license = "LGPL3"
readme = "README.md"
categories = ["science"]
keywords = ["Chemistry"]
edition = "2018"

[dependencies]
GSL = "7.0.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "boys_benchmark"
harness = false
